--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   freezed_annotation: ^3.1.0
   shared_preferences: ^2.5.3
   device_info_plus: ^9.1.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
