--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   shared_preferences: ^2.5.3
   device_info_plus: ^9.1.0
   intl: ^0.20.2
+  file_saver: ^0.2.14
 
 dev_dependencies:
   flutter_test:
